chore: mapping fixes
